[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Winkle-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Characters/Animations/CharacterAnims.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Assets/Art/button_big_purple_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/button_big_yellow.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/button_big_yellow_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Title/Screenshot 2021-12-23 100941.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/button_big_purple.png" type="Texture" id=7]
[ext_resource path="res://Scripts/WelcomeINTRODUCTIONS.gd" type="Script" id=8]
[ext_resource path="res://Audio Assets/274175__mafon2__park-ambience-mostly-birds-Good.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audio Assets/Button_Clicks.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.772549, 0.960784, 0.960784, 1 ), Color( 0.772549, 0.960784, 0.960784, 1 ), Color( 0.772549, 0.960784, 0.960784, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Frgnd:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.55, 0, 0.55, 0 ),
"times": PoolRealArray( 0, 1.6, 2.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.55, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.6, 2.8 )
}

[node name="WelcomeINTRODUCTIONS" type="Node2D"]
script = ExtResource( 8 )

[node name="Bkgnd" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
centered = false

[node name="Control" type="Control" parent="."]
margin_top = 255.0
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBubble" type="TextureRect" parent="Control"]
margin_left = 8.0
margin_top = -32.0
margin_right = 1020.0
margin_bottom = 349.0
rect_pivot_offset = Vector2( 490, 150 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBubble"]
margin_left = 60.0
margin_top = 135.0
margin_right = 946.0
margin_bottom = 279.0
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]Welcome to the game of [b]'Life Re-Imagined'[/b]. "
text = "Welcome to the game of 'Life Re-Imagined'. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Control/TextBubble"]
margin_left = 751.0
margin_top = 288.0
margin_right = 985.0
margin_bottom = 361.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextBubble/NextButton"]
margin_right = 234.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TextBubble"]
anims/PopupText = SubResource( 4 )

[node name="Frgnd" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( 121.393, 404.493 )
rotation = 3.14159
scale = Vector2( 0.15, -0.15 )
__meta__ = {
"_edit_group_": true
}

[node name="Beat" type="AnimatedSprite" parent="Frgnd"]
visible = false
frames = ExtResource( 2 )
animation = "BeatWalk"
frame = 2
speed_scale = 0.7
playing = true

[node name="Buff" type="AnimatedSprite" parent="Frgnd"]
visible = false
frames = ExtResource( 2 )
animation = "BuffWalk"
speed_scale = 0.7
playing = true

[node name="Jog" type="AnimatedSprite" parent="Frgnd"]
visible = false
frames = ExtResource( 2 )
animation = "JogWalk"
frame = 5
speed_scale = 0.7
playing = true

[node name="Surp" type="AnimatedSprite" parent="Frgnd"]
visible = false
frames = ExtResource( 2 )
animation = "SurpWalk"
frame = 1
speed_scale = 0.7
playing = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.772549, 0.960784, 0.960784, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Audio" type="Node2D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
autoplay = true

[node name="ButtonPress" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )

[connection signal="pressed" from="Control/TextBubble/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
